Test update for bug in code blocks

--- a/docs/style.css
+++ b/docs/style.css
@@ -20,7 +20,7 @@ code {
 pre code {
 	display: block;
 	/* background: none; */
-	white-space: pre;
+	/* white-space: pre; */
 	-webkit-overflow-scrolling: touch;
 	/* overflow-x: scroll; */
 	max-width: 100%;
