--- a/docs/style.css
+++ b/docs/style.css
@@ -21,7 +21,45 @@ pre code {
 	display: block;
 	white-space: pre;
 	-webkit-overflow-scrolling: touch;
-	/* overflow-x: scroll; */
+	overflow-x: scroll;
 	max-width: 100%;
 	min-width: 100px;
+	scrollbar-width: 10px;
+}
+
+code .comment {
+	color: darkgreen;
+}
+
+code .command {
+	color: darkred;
+}
+
+code .if {
+	color: darkblue;
+}
+
+code .while {
+	color: darkmagenta;
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+	height: 10px;
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+	border-radius: 10px;
+}
+
+
+::-webkit-scrollbar-thumb {
+	background: #888;
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
 }
